stylesheet.less
/* ... */
.tweet {
    margin: 5px 0;
}

.widget.clicktocall {
    a, a:hover {
        @media @mobile {
            .border-radius(3px);
            margin: 5px 0;
            padding: 15px 15px 15px 38px;
        }
    }
}

.widget.ecombasket .ecombasket-pull, .ecombasket-checkout-link {
    background-color: @font-swatch7-background-color;
    border: none;
    .border-radius(3px);
    &:hover {
        text-decoration: none;
    }
} 

.widget.paypalbuynow .widget.button.paypal {
    background-position: 20px;
    padding: 10px 20px 10px 48px;
}

/* SVG Icons */

.svg {
    .widget.ecomproduct .ecom-product .btn.ecom-product-add-to-cart-btn.added .text:before {
        background-image: none;
    }
}

    
/* PNG Icons */

.widget.ecombasket .ecombasket-pull p:before,
.widget.ecomproduct .ecom-product .btn.ecom-product-add-to-cart-btn .text:before {
    height: 15px;
    width: 19px;
    margin: 0 14px 0 0;
    top: 3px;
}

.widget.ecomproduct .ecom-product .btn.ecom-product-add-to-cart-btn.added .text:before {
    background-image: none;
}



/* ===============================
   DIVIDER WIDGET
   =============================== */

hr {
    &.line {
        background-color: @color-swatch7;
        height: 1px;
    }
}

/* ===============================
   TWITTER
   =============================== */

.widget.twitter .bk-full-name {
    color: @color-swatch3;
}

.widget.twitter ul li span a {
    color: @color-swatch3;
    text-decoration: none;
    &:hover {
        text-decoration: underline;
    }
}

ul.twitter {
    .twitter-profile-pic {
        margin-right: 10px;
        margin-top: 2px;
        a img {
            width: 48px;
        }
    }
    .twitter-content {
        padding-left: 68px;
        p {
            padding-bottom: 0;
        }
    }
}

.widget.profile ul.twitter .twitter-profile-pic, .widget.profile ul.twitter time, .widget.profile ul.twitter span {
    display: inline-block;
}

.widget.profile ul.twitter .twitter-profile-pic {
    vertical-align: top;
}

.widget.profile ul.twitter .twitter-content {
    padding-left: 0;
    display: inline-block;
}


/* ===============================
   SOCIAL ICONS
   =============================== */

.widget.socialicons {
    clear: both;
    min-height: 47px;
    width: 100%;
}


.widget.profile .bk-profile-socialicons span a,
.widget.socialicons span a  {
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border-radius: 50px;
    background-color: @color-swatch4;
}

.widget.profile .bk-profile-socialicons a {
    text-decoration: none;
    text-indent: 9999px;
    white-space: nowrap;
}

/* A:HOVER ICONS */

.widget.socialicons span.bk-socialicons-twitter a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a:hover {
    background-color: #4099FF;
}

.widget.socialicons span.bk-socialicons-linkedin a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-linkedin a:hover {
    background-color: #007bb6;
}

.widget.socialicons span.bk-socialicons-facebook a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-facebook a:hover {
    background-color: #3B5998;
}

.widget.socialicons span.bk-socialicons-rss a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-rss a:hover {
    background-color: #FF6600;
}

.widget.socialicons span.bk-socialicons-googleplus a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a:hover {
    background-color: #dd4b39;
}

.widget.socialicons span.bk-socialicons-youtube a:hover,
.widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a:hover {
    background-color: #bb0000;
}


/* ===============================
   SLIDESHOW WIDGET
   =============================== */

.widget.responsiveslideshow .slideshow-widget {
	position: relative;
	.btn-prev,
	.btn-next,
	.btn-play {
		text-indent: 100px;
		overflow: hidden;
		background-color: fadeout(@font-swatch7-background-color, 50%);
		border-radius: 3px;
		width: 36px;
		height: 36px;
		position: absolute;
		top: 50%;
		margin-top: -18px;
		&:after {
			font-size: bkscale(@font-swatch7-font-size, 1.7);
			line-height: bkscale(@font-swatch7-line-height, 1.9);
			color: @font-swatch7-color;
		}
	}
	.btn-play {
		width: 44px;
		height: 44px;
		left: 50%;
		margin-left: -22px;
	}
	.btn-prev,
	.btn-next {
		&:after {
			width: 0;
			height: 0;
			content: "";
			position: absolute;
			top: 8px;
			left: 10px;
			border: 10px solid transparent;
		}
	}
	.btn-prev:after {
		border-right-color: @font-swatch7-color;
		left: 2px;
	}
	.btn-next:after {
		border-left-color: @font-swatch7-color;
		left: 14px;
	}
	&-controls .dot {
		border-radius: 10px;
		border-color: @font-swatch5-color;
	}
	&-controls .dot.selected {
		background: @font-swatch7-background-color;
	}
	.content-wrapper {
		background-color: fadeout(@font-swatch5-color, 50%);
	}
}
/* ... */

